# python-project

./: README.md  pyproject.toml  tox.ini
.github/workflows/: dev.yml
docs/: tutorial.md
hooks/: post_gen_project.py
{{cookiecutter.project_slug}}/: README.md  pyproject.toml  tox.ini
